--- a/mysite/mysite/templates/base.html
+++ b/mysite/mysite/templates/base.html
@@ -8,6 +8,23 @@
   <title>Document</title>
 </head>
 <body>
+  {% if user.is_authenticated %}
+  <h1>{{ user.username }}</h1>
+    <a href="{% url 'accounts:logout' %}">로그아웃</a>
+    <a href="{% url 'accounts:update' %}">회원정보수정</a>
+    <a href="{% url 'accounts:change_password' %}">비밀번호 수정</a>
+  {% else %}
+    <a href="{% url 'accounts:login' %}">로그인</a>
+    <a href="{% url 'accounts:signup' %}">회원가입</a>
+  {% endif %}
+
+  {% if user.is_authenticated %}
+  <form action="{% url 'accounts:delete' %}" method="POST">
+    {% csrf_token %}
+    <input type="submit" value="회원탈퇴">
+  </form>
+  {% endif %}
+  
   <div class="container">
     {% block body %}
     {% endblock %}
