--- a/mysite/articles/templates/articles/detail.html
+++ b/mysite/articles/templates/articles/detail.html
@@ -6,11 +6,19 @@
 <h2>{{ article.title }}</h2>
 <h3>{{ article.content }}</h3>
 <hr>
+{% if user.is_authenticated %}
 <form action="{% url 'articles:comment_create' article.pk %}" method="POST">
   {% csrf_token %}
   {{ comment_form }}
   <input type="submit" value="댓글생성">
 </form>
+{% else %}
+<form action="{% url 'articles:comment_create' article.pk %}" method="POST">
+  {% csrf_token %}
+  {{ comment_form }}
+  <input type="submit" value="댓글생성" disabled>
+</form>
+{% endif %}
 <hr>
 <h3>댓글 목록 ({{ comments|length }}개)</h3>
 <p>{{ article.comment_set.all|length }}</p>
@@ -19,6 +27,7 @@
   <tr style="text-align: center;">
     <td style="border: black solid 1px; width: 30px;">{{ comment.pk }}</td>
     <td style="border: black solid 1px; width: 400px; padding-left: 10px; text-align: left;">{{ comment.content }}</td>
+    {% if user.is_authenticated %}
     <td style="border: black solid 1px; width: 70px;"><a href="#">수정</a></td>
     <td style="border: black solid 1px; width: 70px;">
       <form action="{% url 'articles:comment_delete' article.pk comment.pk %}" method="POST">
@@ -26,17 +35,22 @@
         <input type="submit" value="삭제" class="btn btn-danger">
       </form>
     </td>
+    {% endif %}
   </tr>
 {% empty %}
   <h4>댓글이 없습니다.</h4>
 {% endfor %}
 </table>
 <hr>
+{% if user.is_authenticated %}
 <a href="{% url 'articles:update' article.pk %}">[UPDATE]</a>
+{% endif %}
 <a href="{% url 'articles:index' %}">[back]</a>
+{% if user.is_authenticated %}
 <form action="{% url 'articles:delete' article.pk %}" method="POST">
   {% csrf_token %}
   <input type="submit" value="DELETE" class="btn btn-primary">
 </form>
+    {% endif %}
 
 {% endblock %}
