--- a/mysite/articles/templates/articles/index.html
+++ b/mysite/articles/templates/articles/index.html
@@ -2,7 +2,9 @@
 {% block body %}
 <h1>메인 페이지 입니다.</h1>
 <hr>
+{% if user.is_authenticated %}
 <a href="{% url 'articles:create' %}">[CREATE]</a>
+{% endif %}
 <hr>
 {% for article in articles %}
  <p>{{ article.pk }}번째 글</p>
