--- a/mysite/articles/templates/articles/index.html
+++ b/mysite/articles/templates/articles/index.html
@@ -9,6 +9,7 @@
 {% for article in articles %}
  <p>{{ article.pk }}번째 글</p>
  <p>{{ article.title }}</p>
+ <p>작성자 : {{ article.user }}</p>
  <p>{{ article.comment_set.all|length }}</p>
  <a href="{% url 'articles:detail' article.pk %}">[DETAIL]</a>
  <hr>
