--- a/mysite/mysite/templates/base.html
+++ b/mysite/mysite/templates/base.html
@@ -8,6 +8,14 @@
   <title>Document</title>
 </head>
 <body>
+  {% if messages %}
+      {% for message in messages %}
+      <div class="alert alert-{{ message.tags }}" role="alert">
+        {{ message.message }}
+      </div>
+      {% endfor %}
+  {% endif %}
+  
   {% if user.is_authenticated %}
   <h1>{{ user.username }}</h1>
     <a href="{% url 'accounts:logout' %}">로그아웃</a>
@@ -17,7 +25,7 @@
     <a href="{% url 'accounts:login' %}">로그인</a>
     <a href="{% url 'accounts:signup' %}">회원가입</a>
   {% endif %}
-
+  
   {% if user.is_authenticated %}
   <form action="{% url 'accounts:delete' %}" method="POST">
     {% csrf_token %}
