--- a/mysite/articles/templates/articles/index.html
+++ b/mysite/articles/templates/articles/index.html
@@ -3,15 +3,35 @@
 <h1>메인 페이지 입니다.</h1>
 <hr>
 {% if user.is_authenticated %}
-<a href="{% url 'articles:create' %}">[CREATE]</a>
+<a href="{% url 'articles:create' %}" class="btn btn-primary">[CREATE]</a>
 {% endif %}
 <hr>
 {% for article in articles %}
- <p>{{ article.pk }}번째 글</p>
- <p>{{ article.title }}</p>
- <p>작성자 : {{ article.user }}</p>
- <p>{{ article.comment_set.all|length }}</p>
- <a href="{% url 'articles:detail' article.pk %}">[DETAIL]</a>
+
+<div class="card border-success mb-3" style="max-width: 34rem;">
+  <div class="card-header bg-transparent border-success">
+    제목 : <a href="{% url 'articles:detail' article.pk %}">{{ article.title }}</a>
+  </div>
+  <div class="card-body text-success">
+    <!-- <h5 class="card-title">Success card title</h5> -->
+    {% if article.image %}
+      <img src="{{ article.image_thumbnail.url }}" alt="{{ article.image }}">
+    {% else %}
+      <img src="" alt="이미지가 없습니다">
+    {% endif %}
+  </div>
+  <div class="card-footer bg-transparent border-success">
+    <div style="display: inline-block; width: 100%;">
+      {% include 'articles/_like.html' %}
+      {% include 'articles/_recommend.html' %}
+      <div style="float: left; width: 33%;">
+        <i class="fas fa-comments"></i>
+        <p>댓글 : {{ article.comment_set.all|length }}개</p>
+      </div>
+    </div>
+  </div>
+</div>
+
  <hr>
 {% endfor %}
 {% endblock %}
