--- a/mysite/articles/templates/articles/detail.html
+++ b/mysite/articles/templates/articles/detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block body %}
 <h1>상세 페이지</h1>
 <hr>
@@ -59,4 +60,5 @@
 {% endif %}
 <a href="{% url 'articles:index' %}">[back]</a>
 
+  <script src="{% static 'articles/js/like.js' %}"></script>
 {% endblock %}
