--- a/mysite/mysite/templates/base.html
+++ b/mysite/mysite/templates/base.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://kit.fontawesome.com/684edb5f4d.js" crossorigin="anonymous"></script>
   {% bootstrap_css %}
   <title>Document</title>
